# lazy-adb

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: mirror-main-to-org.yml
core/: adb_manager.py  device_info.py  device_state.py  exporter.py  log_capture.py  platform_tools_bootstrap.py
tests/: test_capture_and_export.py  test_parsers.py  test_platform_tools_bootstrap.py  test_ui_wireless_mapping.py
ui/: __init__.py  action_bar.py  activity_panel.py  advanced_window.py  central_panel.py  export_picker_window.py  guide_window.py  main_window.py  status_panel.py  wireless_setup_window.py
utils/: __init__.py  file_helpers.py  platform_paths.py
